--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "SlopWatch",
   "version": "1.0.0",
-  "description": "Community-powered AI slop detector for X.com",
+  "description": "Human-powered content slop detector for X",
   "permissions": [
     "storage"
   ],
